--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "hubot-redis-brain": "0.0.2",
     "hubot-scripts": "~2.5.16",
     "hubot": "~2.9.3",
-    "hubot-slack": "~2.2.0"
+    "hubot-slack": "~2.2.0",
+    "hubot-suddendeath": "0.0.3"
   },
   "engines": {
     "node": "0.10.x"
