--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "hubot-scripts": "~2.5.16",
     "hubot": "~2.9.3",
     "hubot-slack": "~2.2.0",
-    "hubot-suddendeath": "0.0.3"
+    "hubot-suddendeath": "0.0.3",
+    "hubot-yahoo-amagumo": "0.0.3"
   },
   "engines": {
     "node": "0.10.x"
