--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "saxsir <saxsir.256@gmail.com>",
   "description": "A simple robot for hhlab",
   "dependencies": {
-    "hubot-help": "~0.1.1",
-    "hubot-google-images": "~0.1.0",
-    "hubot-scripts": "~2.5.16",
     "hubot": "~2.9.3",
+    "hubot-google-images": "~0.1.0",
+    "hubot-help": "~0.1.1",
+    "hubot-scripts": "~2.5.16",
+    "hubot-sfc-bus": "^0.1.4",
     "hubot-slack": "~2.2.0",
     "hubot-yahoo-amagumo": "0.0.3"
   },
